K3s/potato-image-upload/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: potato-image-backend
  namespace: potato
  labels:
    app: potato-image-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: potato-image-backend
  template:
    metadata:
      labels:
        app: potato-image-backend
    spec:
      imagePullSecrets:
        - name: potato-pull-secret
      containers:
        - name: potato-image-backend
          image: ghcr.io/withjihyuk/supabase_upload_image:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
