K3s/potato-image-upload/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: potato-image-backend-ingress
  namespace: potato
spec:
  ingressClassName: "traefik"
  rules:
    - host: poato-api.mya.ong
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: potato-image-backend
                port:
                  number: 80
